[package]
name = "smoltable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.1"
log = { version = "0.4.20", features = ["release_max_level_trace"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lsm_tree = { git = "https://github.com/marvin-j97/lsm-tree.git" }
fs_extra = "1.3.0"
sysinfo = "0.29.11"
# jemallocator = "0.5.4"
actix-files = "0.6.2"
base64 = "0.21.7"
