[package]
name = "smoltable"
description = "Bigtable but smol"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74.0"
include = ["src/**/*", "LICENSE", "README.md"]
categories = ["data-structures", "database-implementations", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[dependencies]
actix-web = "4.4.1"
env_logger = "0.10.1"
log = { version = "0.4.20", features = ["release_max_level_trace"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

# NOTE: Don't need bloom filters, because we always do prefix queries for pretty much everything
fjall = { version = "0.3.0", default-features = false, features = [] }

fs_extra = "1.3.0"
sysinfo = "0.29.11"
actix-files = "0.6.5"
actix-cors = "0.7.0"
tokio = "1.34.0"
bincode = { version = "1.3.3" }
nanoid = "0.4.0"
test-log = "0.2.14"
tempfile = "3.9.0"
