[workspace]
resolver = "2"
members = ["server", "smoltable"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74.0"
categories = ["data-structures", "database-implementations", "algorithms"]

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
