[package]
name = "server"
description = "Smoltable powered by actix-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
log = { version = "0.4.21", features = ["release_max_level_trace"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

# NOTE: Don't need bloom filters, because we always do prefix queries for pretty much everything
fjall = { version = "0.6.3" }
smoltable = { path = "../smoltable" }

fs_extra = "1.3.0"
sysinfo = "0.29.11"
actix-files = "0.6.5"
actix-cors = "0.7.0"
tokio = "1.37.0"
test-log = "0.2.15"
tempfile = "3.10.1"
