[package]
name = "smoltable"
description = "Bigtable but smol"
include = ["src/**/*", "LICENSE", "README.md"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "smoltable"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4.21" }
serde = { version = "1.0.198", features = ["derive", "rc"] }
serde_json = "1.0.116"
test-log = "0.2.15"
tempfile = "3.10.1"
nanoid = "0.4.0"

# NOTE: Don't need bloom filters, because we always do prefix queries for pretty much everything
fjall = { version = "1.0.2" }
